fix: GetRoles
