# backend/controller/role.go
@@ -2,7 +2,6 @@ package controller
 
 import (
 	"heysay/entity"
-	"log"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -14,6 +13,29 @@ type RoleController struct {
 
 func NewRoleController(u RoleUseCase) *RoleController {
 	return &RoleController{u}
+}
+
+type GetRolesResponse struct {
+	Roles []*entity.Role `json:"roles"`
+}
+
+// GetRoles godoc
+//
+// @Summary	ロール取得 API
+// @Description
+// @Tags		Role
+// @Accept		json
+// @Produce		json
+// @Success		200		"OK"		GetRolesResponse
+// @Failure		401		{object}	entity.ErrorResponse
+// @Failure		404		{object}	entity.ErrorResponse
+// @Router		/roles	[get]
+func (c RoleController) GeteRoles(ctx *gin.Context) (interface{}, error) {
+	roles, err := c.RoleUseCase.GetRoles(ctx)
+	if err != nil {
+		return nil, entity.WrapError(http.StatusBadRequest, err)
+	}
+	return GetRolesResponse{Roles: roles}, nil
 }
 
 type CreateRoleRequest struct {
@@ -33,7 +55,6 @@ type CreateRoleRequest struct {
 // @Failure		401		{object}	entity.ErrorResponse
 // @Router		/roles [post]
 func (c RoleController) CreateRole(ctx *gin.Context) (interface{}, error) {
-	log.Print("lsdfghlsdgjlsdglj")
 	var req *CreateRoleRequest
 	if err := ctx.Bind(&req); err != nil {
 		return nil, entity.WrapError(http.StatusBadRequest, err)
